changes in form

--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <html lang="ukr">
 <head>
     <meta charset="UTF-8">
-    <title>Таблиця  CHECK SKILLS</title>
+    <title>Таблиця</title>
 </head>
 <body>
     <h1>Лабораторна №1</h1>
