--- a/table.html
+++ b/table.html
@@ -11,83 +11,140 @@
     <a href="index.html"><font size="4">На головну</font></a>
     <h3>Завдання</h3>
     <p>Необхідно описати веб-сторінку складу інтернет магазину. ТТХ товару на складі</p>
-    <img src = "img/table.jpg" alt = "Таблиця" width = "90%">
+    <img src = "img/Table.jpg" alt = "Таблиця" width = "90%">
     <br>
     <table width = "90%" border = "1" bordercolor = "black" cellspacing="0">
         <caption><i>Таблиця 1.1</i><h>ТТХ конструкцій</h></caption>
-        <thead>
+        <thead><b>
             <tr bgcolor = "#7a6e6d">
                 <th rowspan="3">№№</th>
-                <th rowspan="3">Конструкції</th>
                 <th rowspan="3">Найменування навантаження</th>
-                <th colspan="8">Навантаження (над рисою - нормативні, під рисою - розрахункові)</th>
+                <th rowspan="3">Од. вим.</th>
+                <th colspan="12">Вантажні польоти</th>
             </tr>
             <tr bgcolor = "#D8DAD3">
-                <th rowspan="2">Постійне</th>
-                <th colspan="2">Тимчасове тривале</th>
-                <th>Коефіцієнт сполучень</th>
-                <th colspan="2">Тимчасове короткочасне</th>
-                <th>Коефіцієнт сполучень</th>
-                <th rowspan="2">Повне навантаження</th>
+                <th colspan="4">3,6 м</th>
+                <th colspan="4">5,4 м</th>
+                <th colspan="4">7,2 м</th>
             </tr>
             <tr bgcolor = "f1f2eb">
-                <th>V1</th>
-                <th>V2</th>
-                <th>V1</th>
-                <th>V3</th>
-                <th>V4</th>
-                <th>V2</th>
+                <th>Постійне</th>
+                <th>Тривале</th>
+                <th>Короткочасне</th>
+                <th>Повне</th>
+                <th>Постійне</th>
+                <th>Тривале</th>
+                <th>Короткочасне</th>
+                <th>Повне</th>
+                <th>Постійне</th>
+                <th>Тривале</th>
+                <th>Короткочасне</th>
+                <th>Повне</th>
             </tr>
-        </thead>    
-        <tbody bgcolor = "#f1f1eb" align="center">
+            </b>
+        </thead>
+        <tbody bgcolor = "#fcfcfa" align="center">
             <tr>
                 <td>6</td>
-                <td rowspan="4">Text1</td>
-                <td>Text2</td>
-                <td>306,3/348,8</td>
+                <td>В приміщеннях горища з урахуванням навантажень від омонолічування покриття</td>
+                <td>кгс/м</td>
+                <td>1196/1392</td>
                 <td>-</td>
+                <td>1261/1389</td>
+                <td>2459/2782</td>
+                <td>1797/2089</td>
                 <td>-</td>
+                <td>1892/2084</td>
+                <td>3689/4173</td>
+                <td>2396/2785</td>
                 <td>-</td>
-                <td>-</td>
-                <td>70/98,0</td>
-                <td>1</td>
-                <td>376,3/446,8</td>
+                <td>2523/2778</td>
+                <td>4919/5563</td>
             </tr>
             <tr>
                 <td>7</td>
-                <td>Text2</td>
-                <td>615,9/689,4</td>
+                <td>В вестибюлях, коридорах</td>
+                <td>кгс/м</td>
+                <td>1196/1392</td>
                 <td>-</td>
+                <td>1261/1389</td>
+                <td>2459/2782</td>
+                <td>1797/2089</td>
                 <td>-</td>
+                <td>1892/2084</td>
+                <td>3689/4173</td>
+                <td>2396/2785</td>
                 <td>-</td>
-                <td>-</td>
-                <td>70/98,0</td>
-                <td>1</td>
-                <td>685,9/787,4</td>
+                <td>2523/2778</td>
+                <td>4919/5563</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><i><b>ІІІ Навантаження з покриття (горизонтальна проекція)</b></i></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>8</td>
-                <td>Text2</td>
-                <td>615,9/689,4</td>
+                <td>Без урахування ваги з/б гребневих балок</td>
+                <td>кгс/м</td>
+                <td>1196/1392</td>
                 <td>-</td>
+                <td>1261/1389</td>
+                <td>2459/2782</td>
+                <td>1797/2089</td>
                 <td>-</td>
+                <td>1892/2084</td>
+                <td>3689/4173</td>
+                <td>2396/2785</td>
                 <td>-</td>
-                <td>-</td>
-                <td>50/70</td>
-                <td>1</td>
-                <td>685,9/787,4</td>
+                <td>2523/2778</td>
+                <td>4919/5563</td>
             </tr>
             <tr>
                 <td>9</td>
-                <td>Text1</td>
-                <td>77,8/84,7</td>
+                <td>З урахуванням ваги з/б гребневих балок перерізом 0,3 х 0,4 м (при довжині балки 7 м та вантажній площі 7м2 їх горизонтальних проекцій)</td>
+                <td>кгс/м</td>
+                <td>1196/1392</td>
                 <td>-</td>
+                <td>1261/1389</td>
+                <td>2459/2782</td>
+                <td>1797/2089</td>
                 <td>-</td>
+                <td>1892/2084</td>
+                <td>3689/4173</td>
+                <td>2396/2785</td>
                 <td>-</td>
+                <td>2523/2778</td>
+                <td>4919/5563</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>З урахуванням навантаження від покриття, тип 2 (без ваги з/б гребневих балок)</td>
+                <td>кгс/м</td>
+                <td>1196/1392</td>
                 <td>-</td>
-                <td>50/70</td>
-                <td>1</td>
-                <td>685,9/787,4</td>
+                <td>1261/1389</td>
+                <td>2459/2782</td>
+                <td>1797/2089</td>
+                <td>-</td>
+                <td>1892/2084</td>
+                <td>3689/4173</td>
+                <td>2396/2785</td>
+                <td>-</td>
+                <td>2523/2778</td>
+                <td>4919/5563</td>
             </tr>
         </tbody>
     </table>
