--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
             <legend>Основні дані про студента</legend>
             <p>
                 <label>ПІБ
-                    <input id="p_name" type="text">
+                    <input id="name" type="text">
                 </label>
                 <label>Назва групи
                     <select>
