--- a/form.html
+++ b/form.html
@@ -1,10 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="ukr">
-
 <head>
     <meta charset="UTF-8">
-    <title>Таблиця</title>
+    <title>Таблиця  CHECK SKILLS</title>
 </head>
 <body>
     <h1>Лабораторна №1</h1>
@@ -12,68 +10,60 @@
     <h2>Виконав студент групи АнД-31 Пархоменко Е.Д.</h2>
     <a href="index.html"><font size="4">На головну</font></a>
     <h3>Завдання</h3>
-    <p>Необхідно розробити форму для реєстрації студента у веб-системі.
-        Необхідно заповнити наступні данні: </p>
+    <p>Необхідно розробити форму для введення товару до інтернет-магазину. Необхідно заповнити наступні данні:</p>
     <ul>
-        <li>Основні дані про студента, включають ПІБ, назву групи
-            (вибирається із списку), форму навчання(бюджет або контакт) реалізується у
-            вигляді перемикача, коротку інформацію про студента, електрона адреса
-            студента;</li>
-        <li>Особисті дані студента, включають дані паспорта, ідентифікаційний
-            код, рік народження, стать (реалізується у вигляді перемикача).</li>
+        <li>дані про товар, включають назву товару, тип товару(вибирається зі
+            списку), опис, поточну ціну, ціну зі знижкою;</li>
+        <li>дані про виробника, включають назву, електрону пошту, посилання на
+            веб-сайт, коментарі.</li>
     </ul>
-    <from action="" method = POST">
+    <form action="" method = POST">
         <fieldset>
-            <legend>Основні дані про студента</legend>
+            <legend>Товари</legend>
             <p>
-                <label>ПІБ
-                    <input id="name" type="text">
+                <label>Назва товару
+                    <input id="p_name" type="text">
                 </label>
-                <label>Назва групи
+                <label>Тип товару
                     <select>
-                        <option>АнД-31</option>
-                        <option>КН-31</option>
-                        <option>КН-32</option>
+                        <option>Для дому</option>
+                        <option>Для саду</option>
+                        <option>Для огороду</option>
+                        <option>Інше</option>
                     </select>
                 </label>
-                <br>
-                <label>Форма навчання
-                    <br>
-                    <label>Бюджет<input id="budget" type = "radio" name = "study_form"></label>
-                    <label>Контракт<input id="contr" type = "radio" name = "study_form"></label>
-                </label>
-                <br>
-                <label>Коротка інформацію про студента
-                    <br>
-                    <textarea rows="5" cols="50"></textarea>
-                </label>
-                <br>
-                <label>Електрона адреса
-                    <input id="email" type="email">
-                </label>
             </p>
+            <p>
+                <label>Опис
+                    <textarea rows="5" cols="50"></textarea>
+                </label>    
+            </p>
+            <label>Поточна ціна
+                <input id="current_price" type="number" min="1" step="any">
+            </label>
+            <label>Ціна зі знижкою
+                <input id="discounted_price" type="number" min="1" step="any">
+            </label>
         </fieldset>
         <fieldset>
-            <legend>Особисті дані студента</legend>
+            <legend>Виробник</legend>
             <p>
-                <label>Дані паспорта
-                    <input id="docs" type="text">
+                <label>Ім'я виробника
+                    <input id="producer_name" type="text">
                 </label>
-                <label>ІПН
-                    <input id="ipn" type="number">
+                <label>Електрона пошта
+                    <input id="producer_email" type="email">
                 </label>
             </p>
-            <label>Рік народження
-                <input id="date" type="date">
+            <label>Посилання на веб-сайт
+                <input id="web_link" type="url">
             </label>
             <p>
-                <label>Стать
-                    <br>
-                    <label>Чоловіча<input id="male" type = "radio" name = "sex"></label>
-                    <label>Жіноча<input id="female" type = "radio" name = "sex"></label>
+                <label>Коментарі
+                    <textarea rows="5" cols="50"></textarea>
                 </label>
             </p>
         </fieldset>
         <button type="submit">Відправити</button>
-    </from>
+    </form>
 </body>
